--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
     "lucide-react": "^0.439.0",
     "newsapi": "^2.4.1",
-    "next": "14.2.9",
+    "next": "^14.2.9",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
