--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "^14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-text-to-speech": "^0.17.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "@types/node": "^20",
